--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,21 @@
     "require": {
         "php": "^8.2",
         "ext-json": "*",
-        "psr/http-client": "^1.0"
+        "cuyz/valinor": "^1.7",
+        "league/oauth2-client": "^2.7",
+        "psr/http-client": "^1.0",
+        "psr/log": "^3.0",
+        "webmozart/assert": "^1.11"
     },
     "require-dev": {
         "phpunit/phpunit": "10.4.2",
-        "phpstan/phpstan": "^1.10"
+        "phpstan/phpstan": "^1.10",
+        "guzzlehttp/guzzle": "^7.8",
+        "nyholm/psr7": "^1.8"
+    },
+    "suggest": {
+        "nyholm/psr7": "^1.8",
+        "guzzlehttp/guzzle": "^7.8"
     },
     "autoload": {
         "psr-4": {
