--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -29,4 +29,4 @@ jobs:
         run: docker run -d twitch-cli:latest
 
       - name: Execute tests (Unit and Functional tests) via PHPUnit
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpunit tests
