--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -26,7 +26,7 @@ jobs:
         run: docker build . --file tests/Dockerfile --tag twitch-cli:latest
 
       - name: Run Twitch Mock API
-        run: docker run -d twitch-cli:latest
+        run: docker run -p 8000:8080 -d twitch-cli:latest
 
       - name: Execute tests (Unit and Functional tests) via PHPUnit
         run: vendor/bin/phpunit tests
