--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "phpunit/phpunit": "10.4.2",
         "phpstan/phpstan": "^1.10",
         "guzzlehttp/guzzle": "^7.8",
-        "nyholm/psr7": "^1.8"
+        "nyholm/psr7": "^1.8",
+        "php-http/discovery": "^1.17"
     },
     "suggest": {
         "nyholm/psr7": "^1.8",
@@ -35,6 +36,11 @@
     "autoload-dev": {
         "psr-4": {
             "SimplyStream\\TwitchApiBundle\\Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
         }
     }
 }
