fix: Fix errors reported by phpstan - Add a new subclass Predictor - Remove obsolete parameters from Outcome.php - Add phpstan-baseline.neon -- Ignores an error, that's for now not important

--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -40,4 +40,5 @@ jobs:
         run: vendor/bin/phpstan analyse
 
       - name: Stop and remove Docker container
+        if: always()
         run: docker stop twitch-mock-api && docker rm twitch-mock-api
