--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,6 +6,9 @@
         <testsuite name="Functional">
             <directory suffix=".php">./tests/Functional</directory>
         </testsuite>
+        <testsuite name="Unit">
+            <directory suffix=".php">./tests/Unit</directory>
+        </testsuite>
     </testsuites>
 
     <coverage>
