--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -1,52 +1,79 @@
 name: QA
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    push:
+        branches: ["main"]
+    pull_request:
+        branches: ["main"]
 
 permissions:
-  contents: read
+    contents: read
 
 jobs:
-  build-twitch-api-and-run-tests:
-    runs-on: ubuntu-latest
+    build-twitch-api-and-run-functionals:
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
+        steps:
+            -   uses: ./github/actions/setup-job
 
-      - name: Build the Docker image
-        run: docker build . --file tests/Dockerfile --tag twitch-cli:latest
+            -   name: Build the Docker image
+                run: docker build . --file tests/Dockerfile --tag twitch-cli:latest
 
-      - name: Run Twitch Mock API
-        run: docker run --name twitch-mock-api -p 8000:8080 -d twitch-cli:latest
+            -   name: Run Twitch Mock API
+                run: docker run --name twitch-mock-api -p 8000:8080 -d twitch-cli:latest
 
-      - uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
+            # This is just a dirty workaround. I'd like to have a script here, that tries every second to reach the mock api
+            -   name: Wait for container to generate mock data
+                run: sleep 10
 
-      # This is just a dirty workaround. I'd like to have a script here, that tries every second to reach the mock api
-      - name: Wait for container to generate mock data
-        run: sleep 10
+            -   name: Execute tests (Unit and Functional tests) via PHPUnit
+                run: vendor/bin/phpunit --testsuite Functional --coverage-clover functional.xml
 
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+            -   name: Upload coverage reports to Codecov
+                uses: codecov/codecov-action@v3
+                with:
+                    flags: 'functional'
+                    files: ./functional.xml
+                env:
+                    CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Execute tests (Unit and Functional tests) via PHPUnit
-        run: vendor/bin/phpunit tests
+            -   name: Stop and remove Docker container
+                if: always()
+                run: docker stop twitch-mock-api && docker rm twitch-mock-api
 
-      - name: PHPStan code analysis
-        run: vendor/bin/phpstan analyse
+    run-phpstan:
+        runs-on: ubuntu-latest
 
-      - name: Check for PHP codestyle compliance
-        run: vendor/bin/php-cs-fixer check --allow-risky=yes
+        steps:
+            -   uses: ./github/actions/setup-job
 
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+            -   name: PHPStan code analysis
+                run: vendor/bin/phpstan analyse
 
-      - name: Stop and remove Docker container
-        if: always()
-        run: docker stop twitch-mock-api && docker rm twitch-mock-api
+    run-php-cs-fixer:
+        runs-on: ubuntu-latest
+
+        steps:
+            -   uses: ./github/actions/setup-job
+
+            -   name: Check for PHP codestyle compliance
+                run: vendor/bin/php-cs-fixer check --allow-risky=yes
+
+    run-unit-tests:
+        runs-on: ubuntu-latest
+
+        steps:
+            -   uses: ./github/actions/setup-job
+
+            -   name: Execute tests (Unit and Functional tests) via PHPUnit
+                run: vendor/bin/phpunit --testsuite Functional --coverage-clover functional.xml
+
+            -   name: Upload coverage reports to Codecov
+                uses: codecov/codecov-action@v3
+                with:
+                    flags: 'functional'
+                    files: ./functional.xml
+                env:
+                    CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+
