--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -14,6 +14,8 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            -   uses: actions/checkout@v3
+
             -   uses: ./github/actions/setup-job
 
             -   name: Build the Docker image
@@ -45,6 +47,8 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            -   uses: actions/checkout@v3
+
             -   uses: ./github/actions/setup-job
 
             -   name: PHPStan code analysis
@@ -54,6 +58,8 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            -   uses: actions/checkout@v3
+
             -   uses: ./github/actions/setup-job
 
             -   name: Check for PHP codestyle compliance
@@ -63,6 +69,8 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            -   uses: actions/checkout@v3
+
             -   uses: ./github/actions/setup-job
 
             -   name: Execute tests (Unit and Functional tests) via PHPUnit
