--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -16,7 +16,13 @@ jobs:
         steps:
             -   uses: actions/checkout@v3
 
-            -   uses: ./github/actions/setup-job
+            -   uses: shivammathur/setup-php@v2
+                with:
+                    php-version: '8.2'
+
+            -   name: Install Dependencies
+                run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+                shell: bash
 
             -   name: Build the Docker image
                 run: docker build . --file tests/Dockerfile --tag twitch-cli:latest
@@ -49,7 +55,13 @@ jobs:
         steps:
             -   uses: actions/checkout@v3
 
-            -   uses: ./github/actions/setup-job
+            -   uses: shivammathur/setup-php@v2
+                with:
+                    php-version: '8.2'
+
+            -   name: Install Dependencies
+                run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+                shell: bash
 
             -   name: PHPStan code analysis
                 run: vendor/bin/phpstan analyse
@@ -60,7 +72,13 @@ jobs:
         steps:
             -   uses: actions/checkout@v3
 
-            -   uses: ./github/actions/setup-job
+            -   uses: shivammathur/setup-php@v2
+                with:
+                    php-version: '8.2'
+
+            -   name: Install Dependencies
+                run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+                shell: bash
 
             -   name: Check for PHP codestyle compliance
                 run: vendor/bin/php-cs-fixer check --allow-risky=yes
@@ -71,7 +89,13 @@ jobs:
         steps:
             -   uses: actions/checkout@v3
 
-            -   uses: ./github/actions/setup-job
+            -   uses: shivammathur/setup-php@v2
+                with:
+                    php-version: '8.2'
+
+            -   name: Install Dependencies
+                run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+                shell: bash
 
             -   name: Execute tests (Unit and Functional tests) via PHPUnit
                 run: vendor/bin/phpunit --testsuite Functional --coverage-clover functional.xml
