--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -49,6 +49,31 @@ jobs:
                 if: always()
                 run: docker stop twitch-mock-api && docker rm twitch-mock-api
 
+    run-unit-tests:
+        runs-on: ubuntu-latest
+
+        steps:
+            -   uses: actions/checkout@v3
+
+            -   uses: shivammathur/setup-php@v2
+                with:
+                    php-version: '8.2'
+
+            -   name: Install Dependencies
+                run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+                shell: bash
+
+            -   name: Execute tests (Unit) via PHPUnit
+                run: vendor/bin/phpunit --testsuite Unit --coverage-clover unit.xml
+
+            -   name: Upload coverage reports to Codecov
+                uses: codecov/codecov-action@v3
+                with:
+                    flags: 'unit'
+                    files: ./unit.xml
+                env:
+                    CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
     run-phpstan:
         runs-on: ubuntu-latest
 
@@ -82,30 +107,3 @@ jobs:
 
             -   name: Check for PHP codestyle compliance
                 run: vendor/bin/php-cs-fixer check --allow-risky=yes
-
-    run-unit-tests:
-        runs-on: ubuntu-latest
-
-        steps:
-            -   uses: actions/checkout@v3
-
-            -   uses: shivammathur/setup-php@v2
-                with:
-                    php-version: '8.2'
-
-            -   name: Install Dependencies
-                run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-                shell: bash
-
-            -   name: Execute tests (Unit and Functional tests) via PHPUnit
-                run: vendor/bin/phpunit --testsuite Functional --coverage-clover functional.xml
-
-            -   name: Upload coverage reports to Codecov
-                uses: codecov/codecov-action@v3
-                with:
-                    flags: 'functional'
-                    files: ./functional.xml
-                env:
-                    CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-
