--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "league/oauth2-client": "^2.7",
         "psr/http-client": "^1.0",
         "psr/log": "^3.0",
-        "webmozart/assert": "^1.11"
+        "webmozart/assert": "^1.11 || ^2.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "10.4.2",
